# blitsort-sys

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
src/: lib.rs  sort.rs
